--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -8,4 +8,5 @@
 {% block content %}
   <h1>Hello, world!</h1>
   <p><img src="{% static 'img/django-logo-negative.svg' %}"></p>
+  <a href="{% url 'main:profile'%}">Click here to go to the profile page.</a>
 {% endblock content %}
